fixing alignment of icons inside cardDetails

--- a/frontend/src/assets/styles/views/_card-details.scss
+++ b/frontend/src/assets/styles/views/_card-details.scss
@@ -10,6 +10,14 @@
 	transform: translate(-50%, -50%);
 	border-radius: 5px;
 	z-index: 10;
+	svg{
+		display: flex;
+		justify-content: center;
+		align-items: flex-start;
+		width: 50px;
+		height: 24px;
+		margin-top: 4px;
+	}
 	a {
 		text-decoration: none;
 	}
@@ -20,16 +28,17 @@
 		font-family: inherit;
 	}
 	.card-details-header {
-		margin: 12px 40px 8px 56px;
+		margin: 12px 40px 8px 0px;
 		display: flex;
 		justify-content: space-between;
 		height: 80px;
+		header{
+			display: flex;
+			div{
+				margin-left:10px;
+			}
+		}
 	}
-	// .card-details-header svg {
-	// 	position: absolute;
-	// 	left: 28px;
-	// 	top: 26px;
-	// }
 	.card-details-header h2 {
 		margin: 0px 0px 0.1em;
 	}
@@ -48,29 +57,20 @@
 		min-height: 24px;
 		overflow-x: hidden;
 		overflow-y: auto;
-		padding: 0 8px 8px 16px;
 		position: relative;
 		width: 570px;
 		z-index: 0;
 	}
-	.card-details-main > * {
-		margin-left: 40px;
-	}
-	.card-details-activity {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		width: 90%;
-		// svg {
-		// position: absolute;
-		// left: 18px;
-		// top: 130px;
-		// }
-	}
+	.card-details-activity,
 	.card-details-desc {
+		display: flex;
 		margin-bottom: 30px;
+		main{
+			margin-inline-start: 10px;
+			width: 90%;
+		}
 		textarea {
-			width: 100%;
+			width: 98%;
 			border: none;
 			outline: none;
 			border-radius: 3px;
@@ -86,14 +86,14 @@
 			background-color: #fff;
 			box-shadow: inset 0 0 0 2px #0079bf;
 		}
-		// svg {
-		// 	position: absolute;
-		// 	left: 18px;
-		// 	top: 4px;
-		// }
 	}
 	.card-details-sidebar {
 		width: 30%;
+		svg{
+			width: 30px;
+			height: 16px;
+			margin-right: 10px;
+		}
 	}
 	.add-to-card {
 		h3 {
@@ -120,9 +120,6 @@
 		}
 		div:hover {
 			background-color: rgba(9, 30, 66, 0.212);
-		}
-		svg {
-			margin-right: 10px;
 		}
 	}
 }
